# surveykit-ml

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Config in Modules  MANIFEST.in  Makefile  README.md  Structure.txt  pyproject.toml  requirements.txt  setup.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
Config/: Custom_Config  Example_Default_Config  Key Config Values  Runtime Override  my_project_config.yaml
Notebooks/: 01_eda.ipynb  02_statistical_tests.ipynb  03_ml_models.ipynb  04_reporting.ipynb
survey_toolkit/: __init__.py  cleaner.py  cli.py  config.py  config.yml  eda.py  loader.py  ml_models.py  reporting.py  stats.py  utils.py
tests/: __init__.py  conftest.py  test_cleaner.py  test_cli.py  test_config.py  test_eda.py  test_integration.py  test_loader.py  test_ml_models.py  test_reporting.py  test_stats.py  test_utils.py
